# inbound-parsers

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .trivy.yaml  .trivyignore  .yamllint.yml  AUDIT_SUMMARY.txt  COMPLETED_WORK.md  Dockerfile  EXTRA_IN_GO.csv  FABRICATED_PARSERS_TO_DELETE.txt  MATCHED.csv  MISSING_IN_GO.csv  Makefile  PARSER_AUDIT_REPORT.md  PARSER_IMPLEMENTATION_REPORT.md  PARSER_IMPLEMENTATION_SUMMARY.md  PARSER_MAPPING_INDEX.md  PARSER_MAPPING_REPORT.md  PARSER_MAPPING_SUMMARY.md  PARSER_PORT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.csv  docker-compose.dev.yml  go.mod  go.sum  parser_audit.csv  pyproject.toml  renovate.json
.claude/: CLAUDE.md  CONTEXT.md  GO_STRUCTURE.md  GO_TOOLING.md  HANDOFF.md  MIGRATION_STATUS.md  NEW_PARSERS_LIST.md  PARSER_COUNT_ANALYSIS.md  PARSER_COUNT_SUMMARY.md  PARSER_MIGRATION_ANALYSIS.md  PHASE3_VERIFICATION_REPORT.md  QUALITY_GATES.md  README_PARSER_ANALYSIS.md  VALIDATION_REPORT.json  YIKES.md
.github/workflows/: ci.yml
bento/: fbl.yaml
bento/configs/: fbl-processor-v2.yaml
cmd/bento-parsers/: main.go
cmd/generate-assertions/: main.go
cmd/validate-assertions/: main.go
events/: event.go  event_types.go  requirements.go
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
parsers/: __init__.py  fbl.py  registry.go
parsers/abuse_oneprovider/: abuse_oneprovider.go
parsers/abusehub_nl/: abusehub_nl.go
parsers/abusetrue_nl/: abusetrue_nl.go
parsers/abusix/: abusix.go
parsers/acastano/: acastano.go
parsers/accenture/: accenture.go
parsers/acedatacenter/: acedatacenter.go
parsers/acns/: acns.go
parsers/adciberespaco/: adciberespaco.go
parsers/agouros/: agouros.go
parsers/aiplex/: aiplex.go
parsers/akamai/: akamai.go
scripts/: IMPLEMENTATION_SUMMARY.txt  add_parsers.sh  batch-convert-parsers.go  compare-output.go  convert-all-parsers.sh  convert-parser.sh  delete-extra-parsers.sh  dev-reset.sh  dev-setup.sh  generate-all-parsers.go  generate-csv-reports.go  generate-parser-stubs.sh  insert_registrations.py  map-parsers.go  mass-convert.sh  port-parser-from-python.sh  remove_duplicate_imports.py  verify-mapping.sh
testdata/: README.md
workers/: __init__.py  fbl_worker.py
(+6519 files in other folders)
